--- a/index.html
+++ b/index.html
@@ -2,41 +2,141 @@
 <html>
 
 <head>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Itim&display=swap" rel="stylesheet">
 	<title>Natthawut Namkratok</title>
+
 </head>
+
+<style>
+
+body {
+  background-image: url("bg2.jpg");
+}
+
+ /* ปรับรูปภาพ */
+ .profile-pic {
+        width: 250px;
+        height: 250px;
+        border-radius: 29%;
+        /* ทำให้รูปภาพเป็นวงกลม */
+        margin: auto;
+        display: block;
+        border: 3px solid #dddddd00;
+        /* เพิ่มเส้นขอบสีเทาอ่อน */
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        /* เพิ่มเงาเล็กน้อย */
+    }
+
+.container {
+        width: 55%;
+        margin: auto;
+		border-radius: 5%;
+        background: rgba(172, 179, 193, 0.8);
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(8, 67, 195, 0.877);
+        margin-top: 50px;
+
+		
+}
+
+	h1,
+    h2,
+    h3 {
+        font-family: "Itim";
+        font-weight: 500;
+        text-align: center;
+	}
+
+ 		p {
+        	font-family: "Itim";
+       	 font-weight: 400;
+        	/* Light */
+       	 text-align: center;
+        color: #000000;
+		}
+
+		.section {
+        margin-bottom: 20px;
+    }
+
+    .section h3 {
+        border-bottom: 2px solid #ddd;
+        padding-bottom: 5px;
+    }
+
+    .section ul {
+        list-style-type: none;
+        padding: 0;
+    }
+
+    .section ul li {
+        font-family: "Itim";
+        font-weight: 400;
+        /* Light */
+        margin-bottom: 10px;
+    }
+
+    button {
+        font-family: "Itim";
+        font-weight: 500;
+        /* Light */
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #45a049;
+    }
+  }
+		
+</style> 
+
 <body style="background-color:#78B3CE;">
-	
-<p>
+	<div class="container"> 
+		
+	<p>
 
-	<a>
+		<a>
 
-<h1>Hello My Name is Natthawut Namkratok😀</h1>
+			<h1>Hello My Name is Natthawut Namkratok😀</h1>
 
-<img src="Facebook_Logo_(2019).png"alt="Facebook_Logo_(2019).png" style="width: 64px; height: 900;">
+			<center><img src="Me.jpg" alt="Facebook_Logo_(2019).png" style="width: 268px; height: 900;">
 
-<h1>        </h1>
+			<h1> </h1>
 
-	<a href="https://www.facebook.com/natthxw/" target="_blank">
-		<button>Click here to visit Facebook</button>
-	</a>
+			<a href="https://www.facebook.com/natthxw/" target="_blank">
+				<button>Click here to visit Facebook</button>
+			</a>
+		</div>
 	</p>
+	
+	<div class="container"> 
+	<h2>My nickname P 😎</h2>
+	<h3> age 21 🥳</h3>
+	<h3>height 176</h3>
+	<h3>weight 65 </h3>
+	<h1>My hobby. 😤</h1>
+	<p> play basketball 🏀 play game🎮 play guitar 🎸</p>
+	<h1>My Talent. 😤</h1>
+	<p> Skill game🎮</p>
+	<h3>Now I study at Rajamangala University of Technology.👨‍🎓</h3>
 
-<h2>My nickname P 😎</h2>
-<h3> age 21 🥳</h3>
-<h3>height 176</h3>
-<h3>weight 65 </h3>
-<h2>My hobby. 😤</h2>
-<p> play basketball 🏀 </p>
-<h3>Now I study at Rajamangala University of Technology.👨‍🎓</h3>
-
-<h2>I am studying in the Multimedia.</h2>
-
-<h2>My Picture.</h2>
-<img src="Me.jpg"alt="Me" style="width: 300px; height: 900;">
-
-<h2>My WAIFU.</h2>
-<img src="Hu tao.jpg"alt="Hu tao" style="width: 256px; height: 900;">
-
+	<h2>I am studying in the Multimedia.</h2>
+	<div class="container"> 
+	<h2>My Picture.</h2>
+	<center><img src="IMG_2098.JPG" alt="Me"  class="profile-pic">
+	</div>
+	<div class="container"> 
+	<h2>My WAIFU.</h2>
+	<img src="Hu tao.jpg" alt="Hu tao" style="width: 256px; height: 900;" class="profile-pic">
+	 </div>
+</div>
 </body>
 
 </html>
