--- a/index.html
+++ b/index.html
@@ -18,7 +18,20 @@ body {
  /* ปรับรูปภาพ */
  .profile-pic {
         width: 250px;
-        height: 250px;
+        height: auto;
+        border-radius: 29%;
+        /* ทำให้รูปภาพเป็นวงกลม */
+        margin: auto;
+        display: block;
+        border: 3px solid #dddddd00;
+        /* เพิ่มเส้นขอบสีเทาอ่อน */
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+        /* เพิ่มเงาเล็กน้อย */
+         /* ปรับรูปภาพ */
+ }
+ .profile-pic2 {
+        width: 250px;
+        height: auto;
         border-radius: 29%;
         /* ทำให้รูปภาพเป็นวงกลม */
         margin: auto;
@@ -37,6 +50,26 @@ body {
         padding: 20px;
         box-shadow: 0 0 10px rgba(8, 67, 195, 0.877);
         margin-top: 50px;
+}
+
+.container2 {
+        width: 98%;
+        margin: auto;
+		border-radius: 1%;
+        background: rgba(154, 154, 155, 0.8);
+        padding: 5px;
+        box-shadow: 0 0 10px rgba(8, 67, 195, 0.877);
+        margin-top: 50px;
+
+}
+        .container3 {
+        width: 20%;
+        margin: auto;
+		border-radius: 5%;
+        background: rgba(154, 154, 155, 0.8);
+        padding: 2px;
+        box-shadow: 0 0 10px rgba(8, 67, 195, 0.877);
+        margin-top: 20px;
 
 		
 }
@@ -82,7 +115,7 @@ body {
         font-family: "Itim";
         font-weight: 500;
         /* Light */
-        background-color: #4CAF50;
+        background-color: #1558d3;
         color: white;
         border: none;
         padding: 10px 20px;
@@ -93,7 +126,7 @@ body {
     button:hover {
         background-color: #45a049;
     }
-  }
+  
 		
 </style> 
 
@@ -104,38 +137,103 @@ body {
 
 		<a>
 
-			<h1>Hello My Name is Natthawut Namkratok😀</h1>
+			<h1>YO!! Bro 👋</h1>
 
-			<center><img src="Me.jpg" alt="Facebook_Logo_(2019).png" style="width: 268px; height: 900;">
+			<center><img src="Me.jpg" alt="Facebook_Logo_(2019).png" style="width: 268px; height: 900;"class="profile-pic">
 
 			<h1> </h1>
 
 			<a href="https://www.facebook.com/natthxw/" target="_blank">
-				<button>Click here to visit Facebook</button>
+				<button>Click link My Bio</button>
 			</a>
 		</div>
 	</p>
 	
 	<div class="container"> 
-	<h2>My nickname P 😎</h2>
-	<h3> age 21 🥳</h3>
-	<h3>height 176</h3>
-	<h3>weight 65 </h3>
-	<h1>My hobby. 😤</h1>
-	<p> play basketball 🏀 play game🎮 play guitar 🎸</p>
-	<h1>My Talent. 😤</h1>
+        <h2>---------------------------------------------------------------</h2>ss
+    <h1>My Name is Natthawut Namkratok😀</h1>
+	<h2>My Nickname P 😎</h2>
+	<h3> Age : 21 🥳</h3>
+	<h3> Height 176 Weight 65 </h3>
+    <h3>My birthday : 10/18/2002.
+        <div class="container3"> 
+	<h2>My hobby. 😤</h2>
+</div>
+	<p> | Play basketball 🏀 | Play game🎮 | Play guitar 🎸 | </p>
+    <div class="container3"> 
+	<h2>My Talent. 😤</h2>
+    </div>
 	<p> Skill game🎮</p>
-	<h3>Now I study at Rajamangala University of Technology.👨‍🎓</h3>
+	<h2>Now I study at Rajamangala University of Technology.👨‍🎓</h2>
 
 	<h2>I am studying in the Multimedia.</h2>
-	<div class="container"> 
-	<h2>My Picture.</h2>
-	<center><img src="IMG_2098.JPG" alt="Me"  class="profile-pic">
-	</div>
+    <h2>---------------------------------------------------------------</h2>
+    <h2>My Contacts.</h2>
+
+    <center>
+        <a href="https://www.facebook.com/natthxw/"><img src="Facebook_Logo_(2019).png" style="width: 64px; height: 64;"alt=""></a>
+    </a>
+
+    <h2></h2>
+
+    <center>
+        <a href="https://www.instagram.com/"><img src="instagram_2111463.png" style="width: 64px; height: 64;"alt=""></a>
+    </a>
+
+    <h2>---------------------------------------------------------------</h2>
+
 	<div class="container"> 
 	<h2>My WAIFU.</h2>
 	<img src="Hu tao.jpg" alt="Hu tao" style="width: 256px; height: 900;" class="profile-pic">
 	 </div>
+     
+     <div class="container2">
+        <h3>Education</h3>
+         </div>
+         <style>
+            table {
+                width: 100%;
+                border-collapse: collapse;
+                text-align: left;
+                font-family: 'Itim';
+            }
+
+            th, td {
+                text-align: center;
+                padding: 8px;
+            }
+
+            thead tr {
+                background-color: #c9c8c8a8;
+            }
+        </style>
+        <table>
+            <thead>
+                <tr style="background-color: #c9c8c875; text-align: center; border: 1px solid black;">
+                    <th style="text-align: center; border: 1px solid black;">Year</th>
+                    <th style="text-align: center; border: 1px solid black;">Degree</th>
+                    <th style="text-align: center; border: 1px solid black;">Institution</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td style="text-align: center; border: 1px solid black;">2006</td>
+                    <td style="border: 1px solid black;">Kindergarten</td>
+                    <td style="border: 1px solid black;">Saint Mary School</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; border: 1px solid black;">2014</td>
+                    <td style="border: 1px solid black;">Middle School - High School</td>
+                    <td style="border: 1px solid black;">Saint Mary School</td>
+                </tr>
+                <tr>
+                    <td style="text-align: center; border: 1px solid black;">2016</td>
+                    <td style="border: 1px solid black;">Vocational Certificate</td>
+                    <td style="border: 1px solid black;">Ayutthaya Technological Commercial College</td>
+                </tr>
+            </tbody>
+        </table>
+
 </div>
 </body>
 
