--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<h1> </h1>
 
 			<a href="https://www.facebook.com/natthxw/" target="_blank">
-				<button>Click link My Bio</button>
+				<button>!!!  Dont Click  !!!</button>
 			</a>
 		</div>
 	</p>
@@ -35,13 +35,13 @@
 	<h3> Height 176 Weight 65 </h3>
     <h3>My birthday : 10/18/2002.
         <div class="container3"> 
-	<h2>My hobby. 😤</h2>
+	<h3>My hobby. 😤</h3>
 </div>
 	<p> | Play basketball 🏀 | Play game🎮 | Play guitar 🎸 | </p>
     <div class="container3"> 
-	<h2>My Talent. 😤</h2>
+	<h3>My Talent. 😤</h3>
     </div>
-	<p> Skill game🎮</p>
+	<p> | Skill game🎮 |</p>
 	<h2>Now I study at Rajamangala University of Technology.👨‍🎓</h2>
 
 	<h2>I am studying in the Multimedia.</h2>
@@ -56,6 +56,12 @@
 
     <center>
         <a href="https://www.instagram.com/"><img src="instagram_2111463.png" style="width: 64px; height: 64;"alt=""></a>
+
+        <h2> </h2>
+
+    <center>
+        <img src="cellphone.png" style="width: 64px; height: 64;"alt=""></a>
+        <h2>  </h2>
     </a>
     
     <h2> CellPhone : 0650945118 </h2>
